# plugin_test

./: ReadMe.md
Slice/: .nfs00000000a73c8c9e00000269  CMakeCache.txt  CMakeLists.txt  Makefile  OCRTrt  Slice.cpp  Slice.h  Sliceinference.cu  cmake_install.cmake  kernel.h  test.cpp  test1.cpp  test_plugin.py
Slice/common/: Makefile  cmake_install.cmake
Slice_D/: .nfs00000000a73c8c9e00000210  .nfs00000000a73cd4de000002d2  CMakeCache.txt  Makefile  OCRTrt  Slice.cpp  Slice.h  Sliceinference.cu  cmake_install.cmake  kernel.h  test1.cpp
Slice_D/common/: CMakeLists.txt  Makefile  cmake_install.cmake
resize/: CMakeCache.txt  CMakeLists.txt  Makefile  OCRTrt  cmake_install.cmake  kernel.h  resize.cu  resizeNearestPlugin.cpp  resizeNearestPlugin.h  test1.cpp  test_plugin.py
resize/common/: Makefile  cmake_install.cmake
